--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="keywords" content="kanal,istanbul,kanal istanbul,boğaz" />
 		<meta name="description" content="Boğaz nefes alacak, Türkiye kazanacak" />
 		<link rel="shortcut icon" href="kanalistanbul.png" type="image/x-icon" />
-		<title>Kanal İstanbul</title>
+		<title>kanal istanbul fan club</title>
 	</head>
 	<body>
 		<img
